updated homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Aziiimm.github.io/Azim_Portfolio",
+  "homepage": "http://azimrahat.com",
   "name": "azim_portfolio",
   "version": "0.1.0",
   "private": true,
